--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
-    def nav_version = "2.3.0-alpha03"
+    def nav_version = "2.3.0-alpha04"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -43,7 +46,19 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    implementation 'androidx.fragment:fragment:1.2.3'
+    implementation 'androidx.fragment:fragment-ktx:1.2.3'
+    debugImplementation 'androidx.fragment:fragment-testing:1.2.3'
+    androidTestImplementation 'com.google.truth:truth:1.0.1'
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
+    testImplementation("org.mockito:mockito-core:3.0.0")
+    testImplementation "com.nhaarman:mockito-kotlin:1.6.0"
+    testImplementation 'com.github.marcinOz:TestCoroutineRule:1.0.1'
+
+
 
     // Coroutine
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
@@ -56,6 +71,8 @@ dependencies {
     // navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
 
     // Dagger
     implementation 'com.google.dagger:dagger:2.27'
@@ -73,6 +90,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.7.2'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.0'
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.4.1"
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
 
